@@ -1,0 +1,5 @@
+{
+"name" : "Shell Language Plugin",
+"version" : "0.0.1",
+"langname" : "SH"
+}
